<resources>
    <string name="app_name">MyMaster</string>
    <string name="app_in_name">LITE SERVICE</string>
    <string name="app_name_after">Register App</string>
    <string name="text_bottom">Sign in</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnReg">Registration</string>
    <string name="schedule">Расписание</string>
    <string name="clients">Клиенты</string>
    <string name="profile">Мой профиль</string>
    <string name="settings">Настройки</string>
    <string name="help">Помощь</string>
    <string name="name_services">Название услуги</string>
    <string name="time_services">Время</string>
    <string name="price_services">Цена</string>


    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_weekly_schedule">WeeklySchedule</string>

    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>

    <string name="eight_am">8:00</string>
    <string name="four_pm">14:00</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>

    <item name="hour_tag" type="id" />
    <item name="minute_tag" type="id" />
    <item name="sched_row_tag" type="id" />
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_friend">Клиенты</string>
    <string name="title_activity_services_list">Список услуг</string>
    <string name="title_activity_recording">RecordingActivity</string>
    <string name="title_activity_schedule">Расписание</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="tab_text_1">Неделя 1</string>
    <string name="tab_text_2">Неделя 2</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>