<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background_main_color"
    tools:context=".presentations.ScheduleSetting.FragmentPage">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="День недели"
                android:textSize="20sp" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text=" с"
                android:textSize="20sp" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text=" до"
                android:textSize="20sp" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="     актив."
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sch_day1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:textSize="20sp" />

            <TextView

                android:id="@+id/sch_from1"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/eight_am"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_to1"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/four_pm"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/sch_enable1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sch_day2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_from2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/eight_am"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_to2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/four_pm"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/sch_enable2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sch_day3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_from3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/eight_am"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_to3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/four_pm"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/sch_enable3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sch_day4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_from4"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/eight_am"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_to4"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/four_pm"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/sch_enable4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sch_day5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_from5"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/eight_am"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_to5"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/four_pm"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/sch_enable5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sch_day6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_from6"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/eight_am"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_to6"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/four_pm"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/sch_enable6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sch_day7"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_from7"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/eight_am"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sch_to7"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/four_pm"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/sch_enable7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp" />

        </LinearLayout>
    </LinearLayout>

<Button
android:id="@+id/btn_sch_Save"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@drawable/btn_rounded_corner"
android:text="Сохранить"
android:textColor="@color/text_blue"
android:textSize="20sp"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>


