<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:paddingStart="35dp">

        <EditText
            android:id="@+id/ser_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:color/white"
            android:hint="@string/name_services"
            android:inputType="text"
            android:maxLength="40"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ser_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/price_services"
                android:inputType="number"
                android:maxLength="5"
                android:textSize="16sp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₽" />

            <EditText
                android:id="@+id/ser_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:color/white"
                android:hint="@string/time_services"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="мин" />

            <View
                android:layout_width="180dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/btn_delete_service"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:background="@android:color/white"
                android:src="@drawable/ic_baseline_close_24" />
        </LinearLayout>

        <EditText

            android:id="@+id/ser_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:hint="Инофрмация "
            android:inputType="text"
            android:maxLength="100" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/background_main_color" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>